[add] GitHub action for Lark notification

--- a/workflows/requirement-evaluation.yml
+++ b/workflows/requirement-evaluation.yml
@@ -8,6 +8,7 @@ on:
       - created
 jobs:
   requirement-evaluation:
+    if: github.event.discussion.category.name == 'ideas'
     runs-on: ubuntu-latest
     permissions:
       discussions: write
